--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@ simple-etl/dbt/logs/*
 simple-etl/dbt/target/**
 simple-etl/airflow/logs/*
 simple-etl/airflow/logs/scheduler/*/*.log
+
+
+.DS_Store
+**/.DS_Store
+
+__pycache__/
+*.py[cod]
+*$py.class
+
+airflow/logs/
+airflow/logs/**
+
+airflow/logs/scheduler/
